; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_websocket.c_ws_get_list_node_from_list.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_websocket.c_ws_get_list_node_from_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ws_find_client_sock_in_list = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32**)* @ws_get_list_node_from_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ws_get_list_node_from_list(i32 %0, i32** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32** %1, i32*** %5, align 8
  store i32* null, i32** %6, align 8
  %7 = load i32**, i32*** %5, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = load i32, i32* @ws_find_client_sock_in_list, align 4
  %10 = call i32* @list_find(i32* %8, i32 %9, i32* %4)
  store i32* %10, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %15

13:                                               ; preds = %2
  %14 = load i32*, i32** %6, align 8
  store i32* %14, i32** %3, align 8
  br label %15

15:                                               ; preds = %13, %12
  %16 = load i32*, i32** %3, align 8
  ret i32* %16
}

declare dso_local i32* @list_find(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
